tests/sksl/errors/VectorIndexOutOfRange.glsl
### Compilation failed:

error: 1: index -1 out of range for 'half4'
error: 6: index 4 out of range for 'half4'
error: 7: index 1000000000 out of range for 'half4'
error: 9: index -1 out of range for 'half3'
error: 13: index 3 out of range for 'half3'
error: 14: index 4 out of range for 'half3'
error: 15: index 1000000000 out of range for 'half3'
error: 17: index -1 out of range for 'half2'
error: 20: index 2 out of range for 'half2'
error: 21: index 3 out of range for 'half2'
error: 22: index 4 out of range for 'half2'
error: 23: index 1000000000 out of range for 'half2'
error: 25: index -1 out of range for 'half2'
error: 28: index 2 out of range for 'half2'
error: 29: index 1000000000 out of range for 'half2'
error: 31: index -1 out of range for 'half3'
error: 35: index 3 out of range for 'half3'
error: 36: index 1000000000 out of range for 'half3'
error: 38: index -1 out of range for 'half4'
error: 43: index 4 out of range for 'half4'
error: 44: index 1000000000 out of range for 'half4'
21 errors
